When adding a new donation, allergen checkboxes are now unchecked by default

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -10,62 +10,62 @@
 
   <h4> Allergn and Other Info: </h4>
   <%= f.form_group :is_perishable, required: true do %>
-    <%= f.check_box :is_perishable, checked: true do %>
+    <%= f.check_box :is_perishable, checked: false do %>
       Is Perishable?
     <% end %>
   <% end %>
   <%= f.form_group :requires_preparation, required: true do %>
-    <%= f.check_box :requires_preparation, checked: true do %>
+    <%= f.check_box :requires_preparation, checked: false do %>
       Requires preparation?
     <% end %>
   <% end %>
   <%= f.form_group :is_vegetarian, required: true do %>
-    <%= f.check_box :is_vegetarian, checked: true do %>
+    <%= f.check_box :is_vegetarian, checked: false do %>
       Is vegetarian?
     <% end %>
   <% end %>
   <%= f.form_group :is_vegan, required: true do %>
-    <%= f.check_box :is_vegan, checked: true do %>
+    <%= f.check_box :is_vegan, checked: false do %>
       Is vegan?
     <% end %>
   <% end %>
   <%= f.form_group :is_gluten_free, required: true do %>
-    <%= f.check_box :is_gluten_free, checked: true do %>
+    <%= f.check_box :is_gluten_free, checked: false do %>
       Is gluten free?
     <% end %>
   <% end %>
   <%= f.form_group :contains_peanut, required: true do %>
-    <%= f.check_box :contains_peanut, checked: true do %>
+    <%= f.check_box :contains_peanut, checked: false do %>
       Contains, or may contain, peanuts?
     <% end %>
   <% end %>
   <%= f.form_group :contains_treenut, required: true do %>
-    <%= f.check_box :contains_treenut, checked: true do %>
+    <%= f.check_box :contains_treenut, checked: false do %>
       Contains, or may contain, treenuts?
     <% end %>
   <% end %>
   <%= f.form_group :contains_dairy, required: true do %>
-    <%= f.check_box :contains_dairy, checked: true do %>
+    <%= f.check_box :contains_dairy, checked: false do %>
       Contains, or may contain, dairy?
     <% end %>
   <% end %>
   <%= f.form_group :contains_soy, required: true do %>
-    <%= f.check_box :contains_soy, checked: true do %>
+    <%= f.check_box :contains_soy, checked: false do %>
       Contains, or may contain, soy?
     <% end %>
   <% end %>
   <%= f.form_group :contains_egg, required: true do %>
-    <%= f.check_box :contains_egg, checked: true do %>
+    <%= f.check_box :contains_egg, checked: false do %>
       Contains, or may contain, egg?
     <% end %>
   <% end %>
   <%= f.form_group :contains_fish, required: true do %>
-    <%= f.check_box :contains_fish, checked: true do %>
+    <%= f.check_box :contains_fish, checked: false do %>
       Contains, or may contain, fish?
     <% end %>
   <% end %>
   <%= f.form_group :contains_shellfish, required: true do %>
-    <%= f.check_box :contains_shellfish, checked: true do %>
+    <%= f.check_box :contains_shellfish, checked: false do %>
       Contains, or may contain, shellfish?
     <% end %>
   <% end %>
