--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,15 +17,20 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Account Settings
+          <% if user_signed_in? %>
+            <%=current_user.name%>
+          <% else %>
+            Account Settings
+          <% end %>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <% if user_signed_in? %>
-          <a class="dropdown-item" href="/users/edit">Edit Account</a>
-          <a class="dropdown-item" href="/users/sign_out">Sign Out</a>
+            <a class="dropdown-item" href="/users/edit">Edit Account</a>
+            <a class="dropdown-item" href="/users/donations">View my Donations</a>
+            <a class="dropdown-item" href="/users/sign_out">Sign Out</a>
           <% else %>
-          <a class="dropdown-item" href="/users/sign_up">Sign Up</a>
-          <a class="dropdown-item" href="/users/sign_in">Log In</a>
+            <a class="dropdown-item" href="/users/sign_up">Sign Up</a>
+            <a class="dropdown-item" href="/users/sign_in">Log In</a>
           <% end %>
         </div>
       </li>
