Added list view to view user donations

--- a/app/views/pages/user_donations.html.erb
+++ b/app/views/pages/user_donations.html.erb
@@ -1,9 +1,13 @@
 <div class="container-fluid">
   <div class="col-lg-6 col-lg-offset-3">
-    <h1><%= title 'Why signup?' %></h1>
-    <% description 'Why create an account? So we can make sure your donation is accountable.' %>
-    <% keywords 'Share the Food, Why Signup, Signup, Create Account, Donation' %>
+    <h1><%= title 'View my Donations' %></h1>
+    <% description 'View, edit, or delete your past and current donations.' %>
+    <% keywords 'Share the Food, Account History, User History, Donation History, History, Donation' %>
 
-    <p> Here are your donations.</p>
+    <div class="list-group">
+      <% 
+      <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Cras justo odio</a>
+    </div>
+
   </div>
 </div>
