--- a/app/views/donations/_no_donations.html.erb
+++ b/app/views/donations/_no_donations.html.erb
@@ -1,3 +1,3 @@
 <div class="text-center">
-  There are currently no donations nearby. Check back later!
+  <p>There are currently no donations nearby. Check back later!</p>
 </div>
