--- a/app/views/pages/user_donations.html.erb
+++ b/app/views/pages/user_donations.html.erb
@@ -4,11 +4,9 @@
     <% description 'View, edit, or delete your past and current donations.' %>
     <% keywords 'Share the Food, Account History, User History, Donation History, History, Donation' %>
 
-    
-
     <div class="row" id="donations-list">
-      <%= render @donations %>
-      <%= render no_donations_partial_path %>
+      <%= render @user_donations %>
+      <%= render no_user_donations_partial_path %>
     </div>
 
   </div>
