--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,19 +1,12 @@
-<div class="col-sm-3 single-donation-card" id=<%= donation_path(donation.id) %>>
-  <div class="card">
-    <div class="card-block">
-
-      <h4 class="donation-name">
-        <%= truncate(donation.name, :length => 60) %>
-      </h4>
-      <% if donation.user %>
-        <div class="donation-description">
-          <div class="donated-by">Donated by <%= donation.user.name %> </div>
-          <p> <%= donation.description %></p>
-          <button>
-            <%= link_to "View Donation", donation_path(donation.id), class: "viewing" %>
-          </button>
-        </div>
-      <% end %>
-    </div>
+<a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1"><%= donation.name %></h5>
+    <small><%= donation.fresh_until %></small>
   </div>
-</div>
+  <p class="mb-1"><%= donation.description%></p>
+  <% if donation.user %>
+  <small><%= donation.user.name %></small>
+  <% else %>
+  <small>No User Name Available</small>
+  <% end %>
+</a>
