--- a/app/views/pages/user_donations.html.erb
+++ b/app/views/pages/user_donations.html.erb
@@ -4,6 +4,7 @@
     <% description 'View, edit, or delete your past and current donations.' %>
     <% keywords 'Share the Food, Account History, User History, Donation History, History, Donation' %>
 
+    <h2>Click a donation to edit its details.</h2>
     <div class="row" id="user-donations-list">
       <%= render @user_donations %>
       <%= render no_user_donations_partial_path %>
