--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -12,10 +12,10 @@
           <%= render 'donations/donations_map' %>
         </div>
       </div>
-      
+
       <!-- Donation List -->
       <div class="col-md-6 p-0 h-md-95">
-        <div class="d-md-flex align-items-center h-md-100 p-5 text-center justify-content-center">
+        <div class="d-md-flex h-md-100 p-5 text-center justify-content-center">
           <%= render 'donations/donations_list' %>
         </div>
       </div>
