--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,4 +1,4 @@
-<% if request.original_fullpath == "/pages/user_donations" and current_user and current_user.id == donation.id %>
+<% if request.original_fullpath == "/pages/user_donations" and current_user and current_user.id == donation.user.id %>
   <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1"><%= donation.name %></h5>
@@ -6,7 +6,7 @@
     </div>
     <p class="mb-1"><%= donation.description%></p>
     <% if donation.user %>
-    <%= link_to 'Delete', donation_path(donation), data: {:confirm => 'Are you sure you want to delete this donation?'}, :method => :delete %>
+    <%= link_to 'Delete', donation_path(donation), data: {:confirm => 'Are you sure you want to delete this donation?'}, :method => :delete, class: "btn btn-primary" %>
     <% else %>
     <small>No User Name Available</small>
     <% end %>
