--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,27 +1,38 @@
 <% if request.original_fullpath == "/pages/user_donations" and current_user and current_user.id == donation.user.id %>
-  <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1"><%= donation.name %></h5>
-      <small><%= donation.fresh_until %></small>
+<div class="container-fluid">
+
+<div class="row">
+  <div class="col-lg-10">
+    <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1"><%= donation.name %></h5>
+        <small><%= donation.fresh_until %></small>
+      </div>
+      <p class="mb-1"><%= donation.description%></p>
+    </a>
+  </div>
+  <% if donation.user %>
+  <div class="col-lg-2 col-lg-offset-10">
+    <div class="btn-group" style="width:100%">
+      <%= link_to 'Delete', donation_path(donation), data: {:confirm => 'Are you sure you want to delete this donation?'}, :method => :delete, class: "btn btn-primary btn-block" %>
     </div>
-    <p class="mb-1"><%= donation.description%></p>
-    <% if donation.user %>
-    <%= link_to 'Delete', donation_path(donation), data: {:confirm => 'Are you sure you want to delete this donation?'}, :method => :delete, class: "btn btn-primary" %>
-    <% else %>
-    <small>No User Name Available</small>
-    <% end %>
-  </a>
+  </div>
+  </div>
+</div>
+<% end %>
+</div>
+
 <% else %>
-  <a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1"><%= donation.name %></h5>
-      <small><%= donation.fresh_until %></small>
-    </div>
-    <p class="mb-1"><%= donation.description%></p>
-    <% if donation.user %>
-    <small><%= donation.user.name %></small>
-    <% else %>
-    <small>No User Name Available</small>
-    <% end %>
-  </a>
+<a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1"><%= donation.name %></h5>
+    <small><%= donation.fresh_until %></small>
+  </div>
+  <p class="mb-1"><%= donation.description%></p>
+  <% if donation.user %>
+  <small><%= donation.user.name %></small>
+  <% else %>
+  <small>No User Name Available</small>
+  <% end %>
+</a>
 <% end %>
