Added a display name for users thats distinct from their full name.
Display name is now whats displayed with donations

--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -30,7 +30,7 @@
   </div>
   <p class="mb-1"><%= donation.description%></p>
   <% if donation.user %>
-  <small><%= donation.user.name %></small>
+  <small><%= donation.user.display_name %></small>
   <% else %>
   <small>No User Name Available</small>
   <% end %>
