--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -10,7 +10,7 @@
     <% description 'View the details of this donation. Such as allergy info and location of donation.' %>
     <% keywords 'Share the Food, View Donation, Find Donation, Show Donation, Donation Details, View, Find, Show, Details, Donation' %>
 
-    <h2>Donated by <%= @donation.user.name %> </h2>
+    <h2>Donated by <%= @donation.user.display_name %> </h2>
     <h3> <%= @donation.name %> </h3>
     <p> Description: <%= @donation.description %> </p>
     <p> Fresh Until: <%= @donation.fresh_until %> </p>
