Refractorted viewing active donations. Added page for viewing donation history

--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,4 +1,4 @@
-<% if request.original_fullpath == "/pages/user_donations" and current_user and current_user.id == donation.user.id %>
+<% if request.original_fullpath == "/pages/active_donations" and current_user and current_user.id == donation.user.id %>
 <div class="container-fluid">
 
 <div class="row">
