--- a/app/views/pages/active_donations.html.erb
+++ b/app/views/pages/active_donations.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="col-lg-6 col-lg-offset-3">
-    <h1><%= title 'View my Donations' %></h1>
-    <% description 'View, edit, or delete your past and current donations.' %>
-    <% keywords 'Share the Food, Account History, User History, Donation History, History, Donation' %>
+    <h1><%= title 'My Active Donations' %></h1>
+    <% description 'View, edit, or delete your currently public donations.' %>
+    <% keywords 'Share the Food, Account Donations, Active Donations, Active, Account, Donations' %>
 
     <h2>Click a donation to edit its details.</h2>
     <div class="row" id="user-donations-list">
