--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,38 +1,43 @@
 <% if request.original_fullpath == "/pages/active_donations" and current_user and current_user.id == donation.user.id %>
 <div class="container-fluid">
-
-<div class="row">
-  <div class="col-lg-10">
-    <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1"><%= donation.name %></h5>
-        <small><%= donation.fresh_until %></small>
-      </div>
-      <p class="mb-1"><%= donation.description%></p>
-    </a>
-  </div>
-  <% if donation.user %>
-  <div class="col-lg-2 col-lg-offset-10">
-    <div class="btn-group" style="width:100%">
-      <%= link_to 'Remove', donation_path(donation), data: {:confirm => 'Are you sure you want to publicly remove this donation? You will still be able to view it in your history.'}, :method => :delete, class: "btn btn-primary btn-block", id: "remove_#{donation.id}" %>
+  <div class="row">
+    <div class="col-lg-10">
+      <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1"><%= donation.name %></h5>
+          <small><%= donation.fresh_until %></small>
+        </div>
+        <p class="mb-1"><%= donation.description%></p>
+      </a>
     </div>
-  </div>
+    <% if donation.user %>
+    <div class="col-lg-2 col-lg-offset-10">
+      <div class="btn-group" style="width:100%">
+        <%= link_to 'Remove', donation_path(donation), data: {:confirm => 'Are you sure you want to publicly remove this donation? You will still be able to view it in your history.'}, :method => :delete, class: "btn btn-primary btn-block", id: "remove_#{donation.id}" %>
+      </div>
+    </div>
   </div>
 </div>
 <% end %>
 </div>
 
 <% else %>
-<a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
-  <div class="d-flex w-100 justify-content-between">
-    <h5 class="mb-1"><%= donation.name %></h5>
-    <small><%= donation.fresh_until %></small>
+<div class="container-fluid">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1"><%= donation.name %></h5>
+          <small><%= donation.fresh_until %></small>
+        </div>
+        <p class="mb-1"><%= donation.description%></p>
+        <% if donation.user %>
+        <small><%= donation.user.display_name %></small>
+        <% else %>
+        <small>No User Name Available</small>
+        <% end %>
+      </a>
+    </div>
   </div>
-  <p class="mb-1"><%= donation.description%></p>
-  <% if donation.user %>
-  <small><%= donation.user.display_name %></small>
-  <% else %>
-  <small>No User Name Available</small>
   <% end %>
-</a>
-<% end %>
