--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,13 @@
 <body>
   <%= render 'layouts/navigation' %>
   <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
+  <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
-  <%= yield %>
-  <%= render 'layouts/footer' %>
+  <div class="row">
+    <%= yield %>
+  </div>
+  <div class="row">
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
