--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,15 @@
   <% flash.each do |key, value| %>
   <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
-  <div class="row">
-    <%= yield %>
-  </div>
-  <div class="row">
-    <%= render 'layouts/footer' %>
+  <div class="container-fluid">
+    <div class="col-lg-12">
+      <div class="row">
+        <%= yield %>
+      </div>
+      <div class="row">
+        <%= render 'layouts/footer' %>
+      </div>
+    </div>
   </div>
 </body>
 </html>
