Applied bootstrap theming to all buttons, etc.

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -72,6 +72,6 @@
 
   <%= f.file_field :images, multiple: true %>
 
-  <%= f.submit class: "form-control"%>
+  <%= f.submit class: "form-control btn btn-secondary"%>
 
 <% end %>
