--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -50,5 +50,5 @@
     <% end %>
     <% end %>
 
-    <%= link_to "Back", :back %>
+    <a class="btn btn-secondary btn-lg" href="javascript:history.back()" role="button">Back</a>
   </div>
