--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -46,14 +46,14 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update" %>
+        <%= f.submit "Update", class: "btn btn-secondary" %>
       </div>
       <% end %>
 
       <h3>Cancel my account</h3>
 
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary"  %></p>
 
-      <%= link_to "Back", :back %>
+      <a class="btn btn-secondary btn-lg" href="javascript:history.back()" role="button">Back</a>
     </div>
 </div>
