Added bootstrap theme to pagination

--- a/app/views/donations/_donations_list.html.erb
+++ b/app/views/donations/_donations_list.html.erb
@@ -6,7 +6,7 @@
   <div class="row" id="donations-list">
     <%= render @donations %>
     <div class="infinite-scroll">
-      <%= will_paginate @donations %>
+      <%= will_paginate @donations, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
     </div>
     <%= render no_donations_partial_path %>
   </div>
