--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,11 @@
 @import "responsive";
 @import "search_bar";
 
+html body
+{
+  background-color: rgba(248, 224, 118, 1);
+}
+
 .footer
 {
   padding: 20px;
