--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -4,7 +4,9 @@
     <div class="col-lg-10">
       <a href="<%= edit_donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= edit_donation_path(donation.id) %>>
         <div class="d-flex w-100 justify-content-between">
-          <% unless donation.images.empty? %>
+          <% if donation.images.empty? %>
+          <img src="https://img.icons8.com/ios/50/000000/restaurant-membership-card.png">
+          <% else %>
           <%= image_tag donation.images[0].variant(resize: "150x1500"), class: "rounded float-left" %>
           <% end %>
           <div class="col" align="center">
@@ -17,17 +19,17 @@
             <% end %>
           </div>
           <small><%= donation.fresh_until %></small>
-      </a>
-    </div>
-    <% if donation.user %>
-    <div class="col-lg-2 col-lg-offset-10">
-      <div class="btn-group" style="width:100%">
-        <%= link_to 'Remove', donation_path(donation), data: {:confirm => 'Are you sure you want to publicly remove this donation? You will still be able to view it in your history.'}, :method => :delete, class: "btn btn-primary btn-block", id: "remove_#{donation.id}" %>
+        </a>
+      </div>
+      <% if donation.user %>
+      <div class="col-lg-2 col-lg-offset-10">
+        <div class="btn-group" style="width:100%">
+          <%= link_to 'Remove', donation_path(donation), data: {:confirm => 'Are you sure you want to publicly remove this donation? You will still be able to view it in your history.'}, :method => :delete, class: "btn btn-primary btn-block", id: "remove_#{donation.id}" %>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<% end %>
+  <% end %>
 </div>
 
 <% else %>
@@ -37,8 +39,10 @@
     <div class="col-lg-12">
       <a href="<%= donation_path(donation.id) %>" class="list-group-item list-group-item-action list-group-item-primary" id=<%= donation_path(donation.id) %>>
         <div class="d-flex w-100 justify-content-between">
-          <% unless donation.images.empty? %>
-          <%= image_tag donation.images[0].variant(resize: "150x1500"), class: "rounded float-left" %>
+          <% if donation.images.empty? %>
+          <img src="https://img.icons8.com/ios/50/000000/restaurant-membership-card.png">
+          <% else %>
+          <%= image_tag donation.images[0].variant(resize: "150x150"), class: "rounded float-left" %>
           <% end %>
           <div class="col" align="center">
             <h5 class="mb-1"><%= donation.name %></h5>
