Switched buttons to primary theme because the purple isn't really working

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -85,6 +85,6 @@
 </div>
   <%= f.file_field :images, multiple: true %>
 
-  <%= f.submit class: "form-control btn btn-secondary"%>
+  <%= f.submit class: "form-control btn btn-primary"%>
 
 <% end %>
