--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -100,5 +100,5 @@
       <% end %>
       <% end %>
 
-      <a class="btn btn-secondary btn-lg" href="javascript:history.back()" role="button">Back</a>
+      <a class="btn btn-primary btn-lg" href="javascript:history.back()" role="button">Back</a>
     </div>
