--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,7 +10,7 @@
           <p class="lead">Anyone, no account required, can view food donations nearby!</p>
           <hr class="my-4">
           <p>Click below to view all the donations nearby.</p>
-          <a class="btn btn-secondary btn-lg" href="donations" role="button">Find Donations</a>
+          <a class="btn btn-primary btn-lg" href="donations" role="button">Find Donations</a>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
           <p class="lead">Create an account to donate your food!</p>
           <hr class="my-4">
           <p>Click below to add a new donation.</p>
-          <a class="btn btn-secondary btn-lg" href=<%= food_partial_path? %> role="button">Add Donation</a>
+          <a class="btn btn-primary btn-lg" href=<%= food_partial_path? %> role="button">Add Donation</a>
         </div>
       </div>
     </div>
