--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Send me reset password instructions", class: "btn btn-secondary" %>
+      <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
     </div>
     <% end %>
 
