--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -4,4 +4,4 @@
 
 <p>Click the link below to unlock your account:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token), class: "btn btn-secondary" %></p>
+<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token), class: "btn btn-primary" %></p>
