--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Change my password", class: "btn btn-secondary" %>
+      <%= f.submit "Change my password", class: "btn btn-primary" %>
     </div>
     <% end %>
 
