--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -46,7 +46,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update", class: "btn btn-secondary" %>
+        <%= f.submit "Update", class: "btn btn-primary" %>
       </div>
       <% end %>
 
@@ -54,6 +54,6 @@
 
       <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary"  %></p>
 
-      <a class="btn btn-secondary btn-lg" href="javascript:history.back()" role="button">Back</a>
+      <a class="btn btn-primary btn-lg" href="javascript:history.back()" role="button">Back</a>
     </div>
 </div>
