--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,7 +36,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up", class: "btn btn-secondary" %>
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
     </div>
     <% end %>
 
