Added icon8 credit to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,15 @@
 <footer class="footer">
   <div class="container-fluid" align="center">
     <div class="col-lg-6 col-lg-offset-3">
+      <div class="row">
       <span class="text-muted">
         Share the Food | Questions? Contact us at: contact@sharethefood.net
       </span>
+      </div>
+      <div class="row">
+      <span class="text-muted">
+        <a href="https://icons8.com/">Icons Provided by Icons8</a>
+      </span>
+      </div>
     </div>
   </footer>
