Fresh until now displayed in a more friendly, user localized format!

--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -13,7 +13,7 @@
     <h2>Donated by <%= @donation.user.display_name %> </h2>
     <h3> <%= @donation.name %> </h3>
     <p> Description: <%= @donation.description %> </p>
-    <p> Fresh Until: <%= @donation.fresh_until %> </p>
+    <p> Fresh Until: <%= localize(@donation.fresh_until) %> </p>
 
     <p> <div id="map"> </div> </p>
     <p> Pickup Notes: <%= @donation.pickup_notes %> </p>
