--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -18,7 +18,7 @@
             <small>No User Name Available</small>
             <% end %>
           </div>
-          <small><%= donation.fresh_until %></small>
+          <small><%= localize(donation.fresh_until) %></small>
         </a>
       </div>
       <% if donation.user %>
@@ -53,7 +53,7 @@
             <small>No User Name Available</small>
             <% end %>
           </div>
-          <small><%= donation.fresh_until %></small>
+          <small><%= localize(donation.fresh_until) %></small>
         </div>
       </a>
     </div>
