--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="row">
       <span class="text-muted">
-        <a href="https://icons8.com/">Icons Provided by Icons8</a>
+        <a href="https://icons8.com/icons/ios">Icons Provided by Icons8</a>
       </span>
       </div>
     </div>
