Updated all google maps to scale to size, instead of being fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,24 +42,24 @@ input, select, textarea
 
 #map
 {
-  width: 600px;
-  height: 650px;
+  width: 100%;
+  height: 60rem;
 }
 
 #map1
 {
-  width: 600px;
-  height: 650px;
+  width: 100%;
+  height: 60rem;
 }
 
 #map2
 {
-  width: 600px;
-  height: 650px;
+  width: 100%;
+  height: 60rem;
 }
 
 #map3
 {
-  width: 600px;
-  height: 650px;
+  width: 100%;
+  height: 80rem;
 }
