Fixed Google maps requiring user hit refresh to show

--- a/app/views/donations/_donations_map.html.erb
+++ b/app/views/donations/_donations_map.html.erb
@@ -1,9 +1,5 @@
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    initMapForList(<%= @donations.to_json.html_safe %>)
-  });
+<script src="https://maps.googleapis.com/maps/api/js?key=<%#{ENV['GOOGLE_MAPS_API_KEY']}%>&callback=initMapForList" async defer>
 </script>
-
 <div class="container-fluid">
   <div class="row">
     <p> <div id="map3"></div> </p>
