--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
         <a class="navbar-brand" href="/">Share the Food</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/donations">View Donations</a>
+        <a class="nav-link" href="/donations" data-no-turbolink>View Donations</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/donations/new">Add a Donation</a>
