Added bootstrap theming to checkboxes
Doesnt help all that much though

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -11,73 +11,73 @@
   <h4> Allergen and Other Info: </h4>
   <div class="col" align="left">
   <%= f.form_group :is_perishable, required: true do %>
-    <%= f.check_box :is_perishable do %>
+    <%= f.check_box :is_perishable, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/future.png">
       Is Perishable?
     <% end %>
   <% end %>
   <%= f.form_group :requires_preparation, required: true do %>
-    <%= f.check_box :requires_preparation do %>
+    <%= f.check_box :requires_preparation, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/tableware.png">
       Requires preparation?
     <% end %>
   <% end %>
   <%= f.form_group :is_vegetarian, required: true do %>
-    <%= f.check_box :is_vegetarian do %>
+    <%= f.check_box :is_vegetarian, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/natural-food.png">
       Is vegetarian?
     <% end %>
   <% end %>
   <%= f.form_group :is_vegan, required: true do %>
-    <%= f.check_box :is_vegan do %>
+    <%= f.check_box :is_vegan, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/vegan-symbol.png">
       Is vegan?
     <% end %>
   <% end %>
   <%= f.form_group :is_gluten_free, required: true do %>
-    <%= f.check_box :is_gluten_free do %>
+    <%= f.check_box :is_gluten_free, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/no-gluten.png">
       Is gluten free?
     <% end %>
   <% end %>
   <%= f.form_group :contains_peanut, required: true do %>
-    <%= f.check_box :contains_peanut do %>
+    <%= f.check_box :contains_peanut, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/peanuts.png">
       Contains, or may contain, peanuts?
     <% end %>
   <% end %>
   <%= f.form_group :contains_treenut, required: true do %>
-    <%= f.check_box :contains_treenut do %>
+    <%= f.check_box :contains_treenut, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/nut.png">
       Contains, or may contain, treenuts?
     <% end %>
   <% end %>
   <%= f.form_group :contains_dairy, required: true do %>
-    <%= f.check_box :contains_dairy do %>
+    <%= f.check_box :contains_dairy, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/tetra-pak.png">
       Contains, or may contain, dairy?
     <% end %>
   <% end %>
   <%= f.form_group :contains_soy, required: true do %>
-    <%= f.check_box :contains_soy do %>
+    <%= f.check_box :contains_soy, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/soy.png">
       Contains, or may contain, soy?
     <% end %>
   <% end %>
   <%= f.form_group :contains_egg, required: true do %>
-    <%= f.check_box :contains_egg do %>
+    <%= f.check_box :contains_egg, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/eggs.png">
       Contains, or may contain, egg?
     <% end %>
   <% end %>
   <%= f.form_group :contains_fish, required: true do %>
-    <%= f.check_box :contains_fish do %>
+    <%= f.check_box :contains_fish, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/whole-fish.png">
       Contains, or may contain, fish?
     <% end %>
   <% end %>
   <%= f.form_group :contains_shellfish, required: true do %>
-    <%= f.check_box :contains_shellfish do %>
+    <%= f.check_box :contains_shellfish, class: "btn btn-primary" do %>
       <img src="https://img.icons8.com/ios/50/000000/shellfish.png">
       Contains, or may contain, shellfish?
     <% end %>
