Fixed Google Maps API key by switching over to Rails credentials manager
Instead of using the dotenv gem. Rails 5.2 supports credentials by default.

--- a/app/views/donations/_donations_map.html.erb
+++ b/app/views/donations/_donations_map.html.erb
@@ -1,4 +1,4 @@
-<script src="https://maps.googleapis.com/maps/api/js?key=<%#{ENV['GOOGLE_MAPS_API_KEY']}%>&callback=initMapForList" async defer>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials.GOOGLE_MAPS_API_KEY %>&callback=initMapForList" async defer>
 </script>
 <div class="container-fluid">
   <div class="row">
