Working on fixing bootstrap layouting

--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,16 +1,11 @@
-<div class="col" align="center">
+<div class="col-sm-6 offset-sm-3" align="center">
   <h1><%= title 'View Donations' %></h1>
   <% description 'View all nearby donations.' %>
   <% keywords 'Share the Food, View Donations, Find Donations, Nearby Donations, View Food, Find Food, Nearby Food, Want Food, Need Food, View, Find, Nearby' %>
-  <div class="col-lg-6">
-    <div class="row">
-      <%= render 'donations/donations_map' %>
-    </div>
+  <div class="row">
+    <%= render 'donations/donations_map' %>
   </div>
-
-  <div class="col-lg-6">
-    <div class="row">
-      <%= render 'donations/donations_list' %>
-    </div>
+  <div class="row">
+    <%= render 'donations/donations_list' %>
   </div>
 </div>
