--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,15 +38,9 @@
   <% flash.each do |key, value| %>
   <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
-  <div class="container-fluid">
-    <div class="col-lg-12">
-      <div class="row">
-        <%= yield %>
-      </div>
-      <div class="row">
-        <%= render 'layouts/footer' %>
-      </div>
-    </div>
+  <div class="col-lg-6 offset-lg-3">
+  <%= yield %>
+  <%= render 'layouts/footer' %>
   </div>
 </body>
 </html>
