--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,9 +38,9 @@
   <% flash.each do |key, value| %>
   <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
-  <div class="col-lg-6 offset-lg-3">
-  <%= yield %>
-  <%= render 'layouts/footer' %>
+  <div class="container" align="center">
+    <%= yield %>
+    <%= render 'layouts/footer' %>
   </div>
 </body>
 </html>
