--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -2,8 +2,10 @@
 <% description 'View all nearby donations.' %>
 <% keywords 'Share the Food, View Donations, Find Donations, Nearby Donations, View Food, Find Food, Nearby Food, Want Food, Need Food, View, Find, Nearby' %>
 <div class="row">
+  <div class="col-sm-6">
   <%= render 'donations/donations_map' %>
-</div>
-<div class="row">
+  </div>
+  <div class="col-sm-6 offset-sm-6">
   <%= render 'donations/donations_list' %>
+  </div>
 </div>
