--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,11 +1,13 @@
 <h1><%= title 'View Donations' %></h1>
 <% description 'View all nearby donations.' %>
 <% keywords 'Share the Food, View Donations, Find Donations, Nearby Donations, View Food, Find Food, Nearby Food, Want Food, Need Food, View, Find, Nearby' %>
-<div class="row">
-  <div class="col-sm-6">
-  <%= render 'donations/donations_map' %>
-  </div>
-  <div class="col-sm-6 offset-sm-6">
-  <%= render 'donations/donations_list' %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <%= render 'donations/donations_map' %>
+    </div>
+    <div class="col-6">
+      <%= render 'donations/donations_list' %>
+    </div>
   </div>
 </div>
